wtx-macros/tests/ui/error_enum/bad_aux.stderr
error: #[pkg::aux] must be an item implementation with none, one `#[pkg::aux_data]`, one `#[pkg::aux_params]` or both `#[pkg::aux_data]` and `#[pkg::aux_params]`
 --> tests/ui/error_enum/bad_aux.rs:3:10
  |
3 |   #[pkg::aux]
  |          ^^^
